Fix dialog overflow

--- a/components/Dialog/index.css
+++ b/components/Dialog/index.css
@@ -34,6 +34,7 @@
 	div.content {
 		flex: 1;
 		padding: 6px;
+		overflow: auto;
 	}
 
 	div.footer {
